# DBusXml

./: CMakeLists.txt  com.deepin.dde.BlackScreen.service  main.cpp  manage.cpp  manage.h  readme.txt  window.cpp  window.h
adaptors/: BlackScreenInterfaceAdaptor.cpp  BlackScreenInterfaceAdaptor.h  com.deepin.dde.blackscreen.xml
